<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        android:id="@+id/show_first_layer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/main_button_horizontal_margin"
        android:enabled="false"
        android:text="@string/show_first_layer" />

    <Button
        android:id="@+id/show_second_layer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/main_button_horizontal_margin"
        android:enabled="false"
        android:text="@string/show_second_layer" />

    <Button
        android:id="@+id/show_customization_example_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/main_button_horizontal_margin"
        android:enabled="false"
        android:text="@string/show_customization_example_1" />

    <Button
        android:id="@+id/show_customization_example_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/main_button_horizontal_margin"
        android:enabled="false"
        android:text="@string/show_customization_example_2" />

    <Button
        android:id="@+id/custom_ui"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/main_button_horizontal_margin"
        android:enabled="false"
        android:text="@string/custom_ui" />

    <TextView
        android:id="@+id/text_view_cost"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/text_view_cost" />


</LinearLayout>
